# Bestiary

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_abilities_scope_b.sql
src-tauri/seed/: seed.json
src-tauri/src/: error.rs  main.rs  models.rs  util.rs
src-tauri/src/commands/: ability_commands.rs  entity_commands.rs  item_commands.rs  mod.rs  status_commands.rs  utility_commands.rs
src-tauri/src/db/: connection.rs  mod.rs  queries.rs  repository.rs  seeding.rs
src-tauri/tests/: import_database_tests.rs
src/hooks/: useBackendInitialization.ts  useBestiaryEntry.ts  useBestiaryEntrySession.test.tsx  useBestiaryEntrySession.ts  useComputedEntityStats.ts  useConfirm.ts  useCopyToClipboard.ts  useDebounce.ts  useEntityAbilities.test.tsx  useEntityAbilities.ts  useEntryForm.ts  useEntrySessionMode.ts  useEntryShortcuts.ts  useExternalEntryUpdate.ts  useLatestRef.ts  useLazyEntry.ts  useLoadedReferences.test.ts  useLoadedReferences.ts  useNavigationGuard.test.tsx  useNavigationGuard.tsx  useReferencedEntryName.ts  useResolvedImage.ts  useSidebarData.ts
src/lib/: animations.ts  api.ts  cache.test.ts  cache.ts  clipboard.ts  context-config.ts  dnd.test.ts  empty.test.ts  empty.ts  errors.ts  idle.test.ts  idle.ts  images.test.ts  images.ts  keyboard-shortcuts.test.ts  keyboard-shortcuts.ts  logger.ts  sanitize.test.ts  sanitize.ts  search.ts  theme.ts  type-guards.ts  type-utils.ts  utils.ts  wikiNameLookup.test.ts  wikiNameLookup.ts
(+144 files in other folders)
