[package]
name = "bestiary"
version = "1.0.0"
description = "An offline bestiary, item, and ability compendium for tabletop RPGs."
authors = ["Nrew"]
license = "MIT"
repository = "https://github.com/nrew/bestiary"
homepage = "https://github.com/nrew/bestiary"
keywords = ["tauri", "ttrpg", "bestiary", "compendium", "dnd"]
categories = ["games"]
readme = "../README.md"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Core Tauri runtime with asset protocol support for managed image rendering.
tauri = { version = "2.10.1", features = ["protocol-asset"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - SQLite only. Disable default database backends to keep the release
# dependency surface small.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "json", "uuid", "time", "chrono", "macros", "migrate"] }

# Asynchronous Runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
async-trait = "0.1"

# Data Types & Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
image = "0.24"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Logging
log = "0.4"
env_logger = "0.11"

validator = { version = "0.20", features = ["derive"] }
once_cell = "1.19"
regex = "1.10"

# Type Generation
ts-rs = { version = "10.1.0", features = ["chrono-impl", "uuid-impl"] }

[features]
ts-bindings = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Configure environment for TAO event loop warnings
[package.metadata.env]
RUST_LOG = "warn,bestiary=info"
